@@ -1,3 +1,7 @@
+2007-10-17  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* libc/machine/i386/machine/fastmath.h: New file.
+
 2007-10-13  Eric Blake  <ebb9@byu.net>
 
 	* libc/stdio/vfprintf.c (_VFPRINTF_R) [__OPTIMIZE_SIZE__]:
